WIP hooks refactor

--- a/include/hooks/CMakeLists.txt
+++ b/include/hooks/CMakeLists.txt
@@ -1,11 +1,4 @@
 target_sources(cathook PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/CreateMove.hpp"
-        "${CMAKE_CURRENT_LIST_DIR}/hookedmethods.hpp"
-        "${CMAKE_CURRENT_LIST_DIR}/others.hpp")
-
-if(EnableVisuals)
-    target_sources(cathook PRIVATE
-            "${CMAKE_CURRENT_LIST_DIR}/PaintTraverse.hpp")
-endif()
+        "${CMAKE_CURRENT_LIST_DIR}/HookedMethods.hpp")
 
 target_include_directories(cathook PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
