--- a/src/hooks/visual/CMakeLists.txt
+++ b/src/hooks/visual/CMakeLists.txt
@@ -6,4 +6,5 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/PaintTraverse.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/RandomInt.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/SDL_GL_SwapWindow.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/SDL_PollEvent.cpp")
+        "${CMAKE_CURRENT_LIST_DIR}/SDL_PollEvent.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/IN_KeyEvent.cpp")
