--- a/src/visual/CMakeLists.txt
+++ b/src/visual/CMakeLists.txt
@@ -6,7 +6,8 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/drawmgr.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/EffectChams.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/EffectGlow.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/fidgetspinner.cpp")
+        "${CMAKE_CURRENT_LIST_DIR}/fidgetspinner.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/SDLHooks.cpp")
 
 if(EnableGUI)
     add_subdirectory(menu)
