--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,10 +5,8 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/chatstack.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/conditions.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/crits.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/cvwrapper.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/entitycache.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/entityhitboxcache.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/entry.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/globals.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/hack.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/headshake.cpp"
@@ -17,21 +15,14 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/hooks.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/hoovy.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/https_request.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/init.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/interfaces.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/ipc.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/itemtypes.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/localplayer.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/logging.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/netmessage.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/netvars.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/playerlist.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/playerresource.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/prediction.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/profiler.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/projlogging.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/sconvars.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/sharedobj.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/targethelper.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/textfile.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/textmode.cpp"
@@ -42,6 +33,7 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/votelogger.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/MiscTemporary.cpp")
 
+add_subdirectory(core)
 add_subdirectory(classinfo)
 add_subdirectory(copypasted)
 add_subdirectory(hacks)
