--- a/src/sdk/CMakeLists.txt
+++ b/src/sdk/CMakeLists.txt
@@ -5,4 +5,5 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/KeyValues.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/MaterialSystemUtil.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/tier1.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/utlbuffer.cpp")
+        "${CMAKE_CURRENT_LIST_DIR}/utlbuffer.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/netmessage.cpp")
