--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -38,7 +38,8 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/trace.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/velocity.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/votelogger.hpp"
-        "${CMAKE_CURRENT_LIST_DIR}/MiscTemporary.hpp")
+        "${CMAKE_CURRENT_LIST_DIR}/MiscTemporary.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/Options.hpp")
 
 target_include_directories(cathook PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
 
