--- a/src/hooks/CMakeLists.txt
+++ b/src/hooks/CMakeLists.txt
@@ -13,7 +13,8 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/SendNetMsg.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Shutdown.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/FireEvent.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/FireEventClientSide.cpp")
+        "${CMAKE_CURRENT_LIST_DIR}/FireEventClientSide.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/IsPlayingTimeDemo.cpp")
 
 if(EnableVisuals)
     add_subdirectory(visual)
