--- a/src/hacks/CMakeLists.txt
+++ b/src/hacks/CMakeLists.txt
@@ -1,4 +1,9 @@
 target_sources(cathook PRIVATE
+        "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/CatBot.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/Spam.cpp")
+if(NOT LagbotMode)
+	target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/Achievement.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Aimbot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Announcer.cpp"
@@ -11,13 +16,11 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/AutoDetonator.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoEquip.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoHeal.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/AutoJoin.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoReflect.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoSticky.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/AutoTaunt.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Bunnyhop.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Backtrack.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/CatBot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/FollowBot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/HealArrows.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/KillSay.cpp"
@@ -25,12 +28,12 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/LagExploit.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Misc.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Noisemaker.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Spam.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Trigger.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/UberSpam.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Walkbot.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Radar.cpp")
-
+        add_subdirectory(ac)
+endif()
 if(EnableVisuals)
     target_sources(cathook PRIVATE
             "${CMAKE_CURRENT_LIST_DIR}/ESP.cpp"
@@ -38,5 +41,3 @@ if(EnableVisuals)
             "${CMAKE_CURRENT_LIST_DIR}/SkinChanger.cpp"
             "${CMAKE_CURRENT_LIST_DIR}/SpyAlert.cpp")
 endif()
-
-add_subdirectory(ac)
