--- a/include/hacks/CMakeLists.txt
+++ b/include/hacks/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/KillSay.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Killstreak.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/LagExploit.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/LightESP.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Misc.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Noisemaker.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Spam.hpp"
