--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "ucccccp"]
-	path = ucccccp
-	url = https://github.com/nullworks/ucccccp
 [submodule "source-sdk-2013-headers"]
 	path = source-sdk-2013-headers
 	url = https://github.com/nullworks/source-sdk-2013-headers
@@ -13,3 +10,6 @@
 [submodule "simple-ipc"]
 	path = simple-ipc
 	url = https://github.com/nullworks/simple-ipc
+[submodule "ucccccp"]
+	path = ucccccp
+	url = https://github.com/nullworks/ucccccp.git
