move dependencies to separate directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "source-sdk-2013-headers"]
-	path = source-sdk-2013-headers
+	path = external/source-sdk-2013-headers
 	url = https://github.com/nullworks/source-sdk-2013-headers
 [submodule "libglez"]
-	path = libglez
+	path = external/libglez
 	url = https://github.com/nullworks/libglez
 [submodule "libxoverlay"]
-	path = libxoverlay
+	path = external/libxoverlay
 	url = https://github.com/nullworks/libxoverlay
 [submodule "simple-ipc"]
-	path = simple-ipc
+	path = external/simple-ipc
 	url = https://github.com/nullworks/simple-ipc
 [submodule "ucccccp"]
-	path = ucccccp
+	path = external/ucccccp
 	url = https://github.com/nullworks/ucccccp.git
