--- a/include/config.h.in
+++ b/include/config.h.in
@@ -15,3 +15,4 @@
 #define ENABLE_TEXTMODE_STDIN @EnableTextmodeStdin@
 #define ENABLE_NULL_GRAPHICS @EnableNullGraphics@
 #define TEXTMODE @Textmode@
+#define ENABLE_PROFILER @EnableProfiler@
