--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ if(EnableVisuals)
     if(ExternalDrawing)
         add_subdirectory(external/libxoverlay)
         target_link_libraries(cathook xoverlay)
+        target_include_directories(cathook PRIVATE external/libxoverlay/include)
     endif()
     target_include_directories(cathook PRIVATE "${SDL2_INCLUDE_DIRS}")
     target_link_libraries(cathook glez ${ValveLibrarySDL2} ${GLEW_LIBRARIES})
