--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,6 @@ set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS ${CMAKE_BUILD_TYPE_VALUES})
 cmake_minimum_required(VERSION 3.0)
 project(cathook VERSION 0.0.1)
 add_library(cathook SHARED "")
-file(GLOB_RECURSE Headers "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp")
-file(GLOB_RECURSE Sources "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
-target_sources(cathook PRIVATE ${Sources} ${Headers})
 
 set(GameSpecific 1 CACHE BOOL "Build for specific target game (As opposed to universal, but slower, lib)")
 set(Game "tf2" CACHE STRING "Target game")
@@ -131,6 +128,9 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
     add_custom_command(TARGET cathook POST_BUILD
             COMMAND strip --strip-all "$<TARGET_FILE:cathook>")
 endif()
+
+add_subdirectory(src)
+add_subdirectory(include)
 
 add_custom_command(TARGET cathook POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:cathook> "${CMAKE_SOURCE_DIR}/bin/$<TARGET_FILE_NAME:cathook>")
