--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -50,6 +50,7 @@ add_subdirectory(hacks)
 add_subdirectory(hooks)
 add_subdirectory(reclasses)
 add_subdirectory(sdk)
+add_subdirectory(online)
 
 if(EnableVisuals)
     add_subdirectory(visual)
