--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/nullworks/ucccccp.git
 [submodule "external/co-library"]
 	path = external/co-library
-	url = git@gitcat:nullworks/co-library.git
+	url = https://github.com/nullworks/co-library.git
