--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -52,6 +52,7 @@ add_subdirectory(hooks)
 add_subdirectory(reclasses)
 add_subdirectory(sdk)
 add_subdirectory(online)
+add_subdirectory(settings)
 
 if(EnableVisuals)
     add_subdirectory(visual)
