--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory(hooks)
 add_subdirectory(reclasses)
 add_subdirectory(sdk)
 add_subdirectory(online)
+add_subdirectory(settings)
 
 if(EnableVisuals)
     add_subdirectory(visual)
