--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "external/co-library"]
 	path = external/co-library
 	url = https://github.com/nullworks/co-library.git
+[submodule "external/TF2_NavFile_Reader"]
+	path = external/TF2_NavFile_Reader
+	url = https://github.com/nullworks/TF2_NavFile_Reader
+[submodule "external/PathFinder"]
+	path = external/PathFinder
+	url = https://github.com/Sahnvour/PathFinder
