WIP: Pathfinding Nr. 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,8 @@ target_include_directories(cathook SYSTEM PRIVATE
         "external/source-sdk-2013-headers/mp/src")
 
 target_include_directories(cathook PRIVATE "external/ucccccp")
+target_include_directories(cathook PRIVATE "external/TF2_NavFile_Reader")
+target_include_directories(cathook PRIVATE "external/PathFinder/src/")
 
 if(EnableWarnings)
     target_compile_options(cathook PRIVATE -Wall -Wextra)
