--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,9 @@
 [submodule "external/co-library"]
 	path = external/co-library
 	url = https://github.com/nullworks/co-library.git
-[submodule "include/TF2_NavFile_Reader"]
-	path = include/TF2_NavFile_Reader
-	url = https://github.com/nullworks/TF2_NavFile_Reader.git
 [submodule "external/MicroPather"]
 	path = external/MicroPather
 	url = https://github.com/leethomason/MicroPather
+[submodule "external/TF2_NavFile_Reader"]
+	path = external/TF2_NavFile_Reader
+	url = https://github.com/nullworks/TF2_NavFile_Reader
