--- a/src/hooks/CMakeLists.txt
+++ b/src/hooks/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/FireEvent.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/FireEventClientSide.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/IsPlayingTimeDemo.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/HookTools.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/SendDatagram.cpp")
 
 if(EnableVisuals)
