--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "external/TF2_NavFile_Reader"]
 	path = external/TF2_NavFile_Reader
 	url = https://github.com/nullworks/TF2_NavFile_Reader
+[submodule "external/IRCClient"]
+	path = external/IRCClient
+	url = https://github.com/TotallyNotElite/IRCClient
