--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/IRCClient"]
 	path = external/IRCClient
 	url = https://github.com/nullworks/IRCClient
+[submodule "external/chirc"]
+	path = external/chirc
+	url = https://gitlab.com/TotallyNotElite/chirc.git
