--- a/.gitmodules
+++ b/.gitmodules
@@ -24,4 +24,4 @@
 	url = https://github.com/nullworks/TF2_NavFile_Reader
 [submodule "external/chirc"]
 	path = external/chirc
-	url = https://gitlab.com/TotallyNotElite/chirc.git
+	url = https://github.com/nullworks/ChIRC
