--- a/include/hacks/CMakeLists.txt
+++ b/include/hacks/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/FollowBot.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/hacklist.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/KillSay.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/DominateSay.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Killstreak.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/LightESP.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Misc.hpp"
