Add cmake option to disable IRC

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -17,3 +17,4 @@
 #define TEXTMODE @Textmode@
 #define ENABLE_PROFILER @EnableProfiler@
 #define ENABLE_ONLINE @EnableOnlineFeatures@
+#define ENABLE_IRC @EnableIRC@
