--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ target_sources(cathook PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/MiscTemporary.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/navparser.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Options.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/irc.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/PlayerTools.cpp")
 
 add_subdirectory(core)
