--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/chirc"]
 	path = external/chirc
 	url = https://github.com/nullworks/ChIRC
+[submodule "external/cotire"]
+	path = external/cotire
+	url = https://github.com/sakra/cotire
