--- a/include/online/CMakeLists.txt
+++ b/include/online/CMakeLists.txt
@@ -1,2 +1,1 @@
-target_sources(cathook PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/Online.hpp")
+target_include_directories(cathook PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
