Add support for third-party modules

--- a/.gitignore
+++ b/.gitignore
@@ -279,8 +279,9 @@ cathook.cbp
 .settings
 \.directory
 
-\.kdev4/cathook\.kdev4
-
-cathook\.kdev4
-
 scripts/updater-preferences
+
+/modules/*
+/modules/*/
+!/modules/readme.md
+!/modules/CMakeLists.txt
