--- a/include/config.h.in
+++ b/include/config.h.in
@@ -7,6 +7,7 @@
 #define GAME @Game@
 #define ENABLE_VISUALS @EnableVisuals@
 #define EXTERNAL_DRAWING @ExternalDrawing@
+#define ENABLE_ENGINE_DRAWING @EnableEngineDrawing@
 #define ENABLE_GUI @EnableGUI@
 #define ENABLE_IPC @EnableIPC@
 #define DATA_PATH "@DataPath@"
