Convert all, optional glez
Convert everything to darw::, remove glez

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,9 @@ if(EnableOnlineFeatures)
 endif()
 
 if(EnableVisuals)
-    add_subdirectory(external/libglez)
+    if (NOT EnableEngineDrawing)
+        add_subdirectory(external/libglez)
+    endif()
     target_include_directories(cathook PRIVATE include/visual)
     find_package(SDL2 REQUIRED)
     find_package(GLEW REQUIRED)
@@ -89,7 +91,10 @@ if(EnableVisuals)
         target_include_directories(cathook PRIVATE external/libxoverlay/include)
     endif()
     target_include_directories(cathook PRIVATE "${SDL2_INCLUDE_DIRS}")
-    target_link_libraries(cathook glez ${ValveLibrarySDL2} ${GLEW_LIBRARIES})
+    if (NOT EnableEngineDrawing)
+        target_link_libraries(cathook glez)
+    endif()
+    target_link_libraries(cathook ${ValveLibrarySDL2} ${GLEW_LIBRARIES})
 endif()
 
 configure_file(include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h @ONLY)
