ImGui drawing, 105% fps improvement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ set_property(CACHE Game PROPERTY STRINGS ${GameValues})
 set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
 set(EnableVisuals 1 CACHE BOOL "Enable Visuals")
 set(ExternalDrawing 0 CACHE BOOL "External Visuals")
-set(EnableEngineDrawing 1 CACHE BOOL "Draw using engine and disable libglez whenever possible")
+set(EnableEngineDrawing 0 CACHE BOOL "Draw using engine and disable libglez whenever possible")
+set(EnableImGuiDrawing 1 CACHE BOOL "Draw using ImGui's drawlists")
 set(EnableGUI 1 CACHE BOOL "Enable GUI")
 set(EnableIPC 1 CACHE BOOL "Enable IPC")
 set(DataPath "/opt/cathook/data" CACHE FILEPATH "Data location")
@@ -44,6 +45,13 @@ set(EnableIRC 1 CACHE BOOL "Enable IRC for messaging and ignore-cathook")
 
 if(NOT EnableVisuals)
     set(EnableGUI 0)
+endif()
+
+if (EnableImGuiDrawing)
+    set(EnableEngineDrawing 0)
+    find_package(Freetype REQUIRED)
+    target_include_directories(cathook PRIVATE "${FREETYPE_INCLUDE_DIRS}")
+    target_link_libraries(cathook ${FREETYPE_LIBRARIES})
 endif()
 
 find_package(Git REQUIRED)
@@ -79,7 +87,7 @@ if(EnableOnlineFeatures)
 endif()
 
 if(EnableVisuals)
-    if (NOT EnableEngineDrawing)
+    if (NOT EnableEngineDrawing AND NOT EnableImGuiDrawing)
         add_subdirectory(external/libglez)
     endif()
     target_include_directories(cathook PRIVATE include/visual)
@@ -91,7 +99,7 @@ if(EnableVisuals)
         target_include_directories(cathook PRIVATE external/libxoverlay/include)
     endif()
     target_include_directories(cathook PRIVATE "${SDL2_INCLUDE_DIRS}")
-    if (NOT EnableEngineDrawing)
+    if (NOT EnableEngineDrawing AND NOT EnableImGuiDrawing)
         target_link_libraries(cathook glez)
     endif()
     target_link_libraries(cathook ${ValveLibrarySDL2} ${GLEW_LIBRARIES})
