--- a/include/config.h.in
+++ b/include/config.h.in
@@ -8,6 +8,7 @@
 #define ENABLE_VISUALS @EnableVisuals@
 #define EXTERNAL_DRAWING @ExternalDrawing@
 #define ENABLE_ENGINE_DRAWING @EnableEngineDrawing@
+#define ENABLE_IMGUI_DRAWING @EnableImGuiDrawing@
 #define ENABLE_GUI @EnableGUI@
 #define ENABLE_IPC @EnableIPC@
 #define DATA_PATH "@DataPath@"
