--- a/include/visual/CMakeLists.txt
+++ b/include/visual/CMakeLists.txt
@@ -2,4 +2,8 @@ if(EnableGUI)
     add_subdirectory(menu)
 endif()
 
+if(EnableImGuiDrawing)
+    add_subdirectory(imgui)
+endif()
+
 target_include_directories(cathook PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
