Add ability to disable logging

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -18,3 +18,4 @@
 #define ENABLE_PROFILER @EnableProfiler@
 #define ENABLE_ONLINE @EnableOnlineFeatures@
 #define ENABLE_IRC @EnableIRC@
+#define ENABLE_LOGGING @EnableLogging@
