Excuse me what the fuck

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,13 @@ if(NOT EnableVisuals)
     set(EnableGUI 0)
 endif()
 
-if (EnableImGuiDrawing)
-    set(EnableEngineDrawing 0)
-    find_package(Freetype REQUIRED)
-    target_include_directories(cathook PRIVATE "${FREETYPE_INCLUDE_DIRS}")
-    target_link_libraries(cathook ${FREETYPE_LIBRARIES})
+if (EnableVisuals)
+    if (EnableImGuiDrawing)
+        set(EnableEngineDrawing 0)
+        find_package(Freetype REQUIRED)
+        target_include_directories(cathook PRIVATE "${FREETYPE_INCLUDE_DIRS}")
+        target_link_libraries(cathook ${FREETYPE_LIBRARIES})
+    endif()
 endif()
 
 find_package(Git REQUIRED)
