Add compile options for clip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(EnableWarnings 0 CACHE BOOL "Enable compile warnings")
 set(EnableOnlineFeatures 0 CACHE BOOL "Enable online features (WIP)")
 set(EnableIRC 1 CACHE BOOL "Enable IRC for messaging and ignore-cathook")
 set(EnableLogging 1 CACHE BOOL "Enable logging to /tmp/")
+set(EnableClip 1 CACHE BOOL "Enable anti electron/chromium freezing")
 
 if(NOT EnableVisuals)
     set(EnableGUI 0)
