Make hooks run in a unity build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ if (EnableCotire)
     set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/cotire/CMake")
     cmake_policy(SET CMP0011 NEW)
     include(cotire)
+    file(GLOB_RECURSE ignore_files *.cpp)
+    set(ignore_files ${ignore_files} CACHE INTERNAL "")
 endif()
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -27,6 +29,7 @@ set(Game "tf2" CACHE STRING "Target game")
 set(GameValues "tf2;hl2dm;dab;tf2c;css;dynamic" CACHE INTERNAL "List of supported game types")
 set_property(CACHE Game PROPERTY STRINGS ${GameValues})
 
+set(EnableUnityBuilds 1 CACHE BOOL "Enable Profiler")
 set(EnableProfiler 0 CACHE BOOL "Enable Profiler")
 set(EnableVisuals 1 CACHE BOOL "Enable Visuals")
 set(ExternalDrawing 0 CACHE BOOL "External Visuals")
@@ -161,7 +164,8 @@ add_subdirectory(modules)
 
 if (EnableCotire)
     set_target_properties(cathook PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_SOURCE_DIR}/include/common.hpp")
-    set_target_properties(cathook PROPERTIES COTIRE_ADD_UNITY_BUILD FALSE)
+    set_target_properties(cathook PROPERTIES COTIRE_ADD_UNITY_BUILD true)
+    set_source_files_properties(${ignore_files} PROPERTIES COTIRE_EXCLUDED true)
     cotire(cathook)
 endif()
 
