--- a/src/hooks/visual/CMakeLists.txt
+++ b/src/hooks/visual/CMakeLists.txt
@@ -1,10 +1,12 @@
-target_sources(cathook PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/BeginFrame.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/DrawModelExecute.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/FrameStageNotify.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/OverrideView.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/PaintTraverse.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/RandomInt.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/SDL_GL_SwapWindow.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/SDL_PollEvent.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/IN_KeyEvent.cpp")
+set(files "${CMAKE_CURRENT_LIST_DIR}/BeginFrame.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/DrawModelExecute.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FrameStageNotify.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/OverrideView.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/PaintTraverse.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/RandomInt.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/SDL_GL_SwapWindow.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/SDL_PollEvent.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/IN_KeyEvent.cpp")
+target_sources(cathook PRIVATE ${files})
+list(REMOVE_ITEM ignore_files ${files})
+set(ignore_files ${ignore_files} CACHE INTERNAL "")
