--- a/src/classinfo/CMakeLists.txt
+++ b/src/classinfo/CMakeLists.txt
@@ -1,4 +1,6 @@
-target_sources(cathook PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/classinfo.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/dump.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/dynamic.gen.cpp")
+set(files "${CMAKE_CURRENT_LIST_DIR}/classinfo.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/dump.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/dynamic.gen.cpp")
+target_sources(cathook PRIVATE ${files})
+list(REMOVE_ITEM ignore_files ${files})
+set(ignore_files ${ignore_files} CACHE INTERNAL "")
