--- a/src/copypasted/CMakeLists.txt
+++ b/src/copypasted/CMakeLists.txt
@@ -1,3 +1,5 @@
-target_sources(cathook PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/CSignature.cpp"
+set(files "${CMAKE_CURRENT_LIST_DIR}/CSignature.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Netvar.cpp")
+target_sources(cathook PRIVATE ${files})
+list(REMOVE_ITEM ignore_files ${files})
+set(ignore_files ${ignore_files} CACHE INTERNAL "")
